// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rating component Customized rating component 1`] = `
<div
  class="rating color--dark-blue editing"
>
  <i
    class="rating__star baserow-icon-star rating__star--selected"
  />
  <i
    class="rating__star baserow-icon-star rating__star--selected"
  />
  <i
    class="rating__star baserow-icon-star rating__star--selected"
  />
  <i
    class="rating__star baserow-icon-star"
  />
  <i
    class="rating__star baserow-icon-star"
  />
</div>
`;

exports[`Rating component Default rating component 1`] = `
<div
  class="rating color--dark-orange"
>
  <i
    class="rating__star baserow-icon-star rating__star--selected"
  />
  <i
    class="rating__star baserow-icon-star rating__star--selected"
  />
  <i
    class="rating__star baserow-icon-star rating__star--selected"
  />
</div>
`;
